--- a/public/css/interact.css
+++ b/public/css/interact.css
@@ -13,8 +13,9 @@ v\:* {
   border-radius: 25px;
   padding: 20px;
   /* background GIF produces dithered background at Amiga IBrowse, so better to use
-  table background color to get solid color */
+  table background color to get solid color
   background:url("../../roundcard/round-blue.gif") top left no-repeat;
+  */
   outline: none; /* Remove default browser focus outline */
   transition: border-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
 }
